# CakeCutting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Agent.cpp  Agent.hpp  CMakeLists.txt  main.cpp
